Switched to UCSC, updating logic for dbnfsp

--- a/nbs_genes/nbs_genes.ipynb
+++ b/nbs_genes/nbs_genes.ipynb
@@ -115,7 +115,7 @@
       "# enter database.name of clinvar table\n",
       "clinvar_table = 'public_hg19.clinvar'\n",
       "# enter database.name of dann table\n",
-      "dann_table = 'public_hg19.dann'\n",
+      "dbnfsp_table = 'p7_ref_grch37.dbnsfp_variant'\n",
       "\n",
       "#################\n",
       "## system info ##\n",
@@ -123,16 +123,16 @@
       "# enter path to snpEff.jar on your computer\n",
       "\n",
       "# windows\n",
-      "#snpeff_path = 'D:/Documents/tools/snpEff/snpEff.jar'\n",
+      "snpeff_path = 'D:/Documents/tools/snpEff/snpEff.jar'\n",
       "\n",
       "# mac\n",
-      "snpeff_path = '/Users/selasady/tools/snpEff/snpEff.jar'\n",
+      "#snpeff_path = '/Users/selasady/tools/snpEff/snpEff.jar'\n",
       "\n",
       "# enter desired basename for output files\n",
       "out_name = 'nbs_genes'"
      ],
      "language": "python",
-     "prompt_number": 2
+     "prompt_number": 3
     },
     {
      "cell_type": "heading",
@@ -238,7 +238,7 @@
       "    subject_statement = ''"
      ],
      "language": "python",
-     "prompt_number": 12
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
@@ -254,7 +254,7 @@
       "conn=connect(host='glados19', port=21050)"
      ],
      "language": "python",
-     "prompt_number": 13
+     "prompt_number": 5
     },
     {
      "cell_type": "code",
@@ -321,7 +321,7 @@
       "run_query(kaviar_query, 'nbs_kaviar')"
      ],
      "language": "python",
-     "prompt_number": 27
+     "prompt_number": 8
     },
     {
      "cell_type": "heading",
@@ -349,7 +349,7 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Running the following query was run on impala: \n\n\n       CREATE TABLE IF NOT EXISTS users_selasady.nbs_annotated AS \n        WITH n as (\n            SELECT nbs.*, clin.clin_hgvs, clin.clin_sig, clin.clin_dbn, clin.clin_acc,\n                CASE WHEN (clin.clin_sig NOT REGEXP '3|2[^5]|2$'  \n                    AND  clin.clin_sig REGEXP '4|[^25]5|^5') THEN 'Y'\n                    ELSE 'N'\n                END AS clin_patho\n            FROM users_selasady.nbs_kaviar nbs\n            LEFT JOIN public_hg19.clinvar clin\n                ON nbs.chrom = clin.chrom\n                AND nbs.pos = clin.pos\n                AND nbs.alt = clin.alt\n         )\n        SELECT DISTINCT n.*,\n            CASE WHEN n.alt = 'A' THEN d.score_a\n                WHEN n.alt = 'T' THEN d.score_t\n                WHEN n.alt = 'G' THEN d.score_g\n                WHEN n.alt = 'C' THEN d.score_c \n             END as dann_score,  \n             CASE\n                 WHEN SUBSTRING(n.sample_id, -2) = '01'THEN 'M'\n                 WHEN SUBSTRING(n.sample_id, -2) = '02' THEN 'F'\n                 WHEN SUBSTRING(n.sample_id, -2) = '03'THEN 'NB'\n             END as member,\n             SUBSTRING(n.sample_id, 1, (length(n.sample_id)-3)) as family_id,\n             CONCAT(n.chrom, ':', CAST(n.pos AS STRING), ':', n.ref, ':', n.alt) as var_id\n        FROM n\n        LEFT JOIN public_hg19.dann d\n            ON n.chrom = d.chrom\n            AND n.pos = d.pos\n            \nQuery finished. Closing connection."
+        "Running the following query was run on impala: \n\n        CREATE TABLE IF NOT EXISTS users_selasady.nbs_annotated AS \n        WITH nbs as (\n             SELECT DISTINCT nbs.*, clin.clin_hgvs, clin.clin_sig, clin.clin_dbn,\n                 CASE WHEN (clin.clin_sig NOT REGEXP '3|2[^5]|2$'  \n                     AND  clin.clin_sig REGEXP '4|[^25]5|^5') THEN 'Y'\n                     ELSE 'N'\n                 END AS clin_patho\n             FROM users_selasady.nbs_kaviar nbs\n             LEFT JOIN public_hg19.clinvar clin\n                 ON nbs.chrom = clin.chrom\n                 AND nbs.pos = clin.pos\n                 AND nbs.alt = clin.alt\n          )\n\n        SELECT nbs.*, db.aa_alt, db.sift_score, db.sift_pred, db.polyphen2_hdiv_score,\n            db.polyphen2_hdiv_pred, db.polyphen2_hvar_score, db.polyphen2_hvar_pred, \n            db.fathmm_score, db.fathmm_pred, db.cadd_raw, db.dann_score, db.mutation_taster_pred,\n            db.mutation_assessor_score, mutation_assessor_pred, db.provean_score, db.provean_pred,\n            db.clinvar_clnsig, db.interpro_domain, db.exac_af,\n            CASE\n                WHEN SUBSTRING(nbs.sample_id, -2) = '01'THEN 'M'\n                WHEN SUBSTRING(nbs.sample_id, -2) = '02' THEN 'F'\n                WHEN SUBSTRING(nbs.sample_id, -2) = '03'THEN 'NB'\n                END as member,\n            SUBSTRING(nbs.sample_id, 1, (length(nbs.sample_id)-3)) as family_id,\n            CONCAT(nbs.chrom, ':', CAST(nbs.pos AS STRING), ':', nbs.ref, ':', nbs.alt) as var_id \n        FROM nbs, p7_ref_grch37.dbnsfp_variant db\n            WHERE nbs.chrom = db.chrom\n            AND nbs.pos = db.pos\n            AND nbs.alt = db.alt\n            \nQuery finished. Closing connection."
        ]
       },
       {
@@ -361,45 +361,44 @@
       }
      ],
      "input": [
-      "dann_query = '''\n",
+      "dbnsfp_query = '''\n",
+      "        CREATE TABLE IF NOT EXISTS {}.nbs_annotated AS \n",
+      "        WITH nbs as (\n",
+      "             SELECT DISTINCT nbs.*, clin.clin_hgvs, clin.clin_sig, clin.clin_dbn,\n",
+      "                 CASE WHEN (clin.clin_sig NOT REGEXP '3|2[^5]|2$'  \n",
+      "                     AND  clin.clin_sig REGEXP '4|[^25]5|^5') THEN 'Y'\n",
+      "                     ELSE 'N'\n",
+      "                 END AS clin_patho\n",
+      "             FROM {}.nbs_kaviar nbs\n",
+      "             LEFT JOIN {} clin\n",
+      "                 ON nbs.chrom = clin.chrom\n",
+      "                 AND nbs.pos = clin.pos\n",
+      "                 AND nbs.alt = clin.alt\n",
+      "          )\n",
       "\n",
-      "       CREATE TABLE IF NOT EXISTS {}.nbs_annotated AS \n",
-      "        WITH n as (\n",
-      "            SELECT nbs.*, clin.clin_hgvs, clin.clin_sig, clin.clin_dbn, clin.clin_acc,\n",
-      "                CASE WHEN (clin.clin_sig NOT REGEXP '3|2[^5]|2$'  \n",
-      "                    AND  clin.clin_sig REGEXP '4|[^25]5|^5') THEN 'Y'\n",
-      "                    ELSE 'N'\n",
-      "                END AS clin_patho\n",
-      "            FROM {}.nbs_kaviar nbs\n",
-      "            LEFT JOIN {} clin\n",
-      "                ON nbs.chrom = clin.chrom\n",
-      "                AND nbs.pos = clin.pos\n",
-      "                AND nbs.alt = clin.alt\n",
-      "         )\n",
-      "        SELECT DISTINCT n.*,\n",
-      "            CASE WHEN n.alt = 'A' THEN d.score_a\n",
-      "                WHEN n.alt = 'T' THEN d.score_t\n",
-      "                WHEN n.alt = 'G' THEN d.score_g\n",
-      "                WHEN n.alt = 'C' THEN d.score_c \n",
-      "             END as dann_score,  \n",
-      "             CASE\n",
-      "                 WHEN SUBSTRING(n.sample_id, -2) = '01'THEN 'M'\n",
-      "                 WHEN SUBSTRING(n.sample_id, -2) = '02' THEN 'F'\n",
-      "                 WHEN SUBSTRING(n.sample_id, -2) = '03'THEN 'NB'\n",
-      "             END as member,\n",
-      "             SUBSTRING(n.sample_id, 1, (length(n.sample_id)-3)) as family_id,\n",
-      "             CONCAT(n.chrom, ':', CAST(n.pos AS STRING), ':', n.ref, ':', n.alt) as var_id\n",
-      "        FROM n\n",
-      "        LEFT JOIN {} d\n",
-      "            ON n.chrom = d.chrom\n",
-      "            AND n.pos = d.pos\n",
-      "            '''.format(out_db, out_db, clinvar_table, dann_table)\n",
+      "        SELECT nbs.*, db.aa_alt, db.sift_score, db.sift_pred, db.polyphen2_hdiv_score,\n",
+      "            db.polyphen2_hdiv_pred, db.polyphen2_hvar_score, db.polyphen2_hvar_pred, \n",
+      "            db.fathmm_score, db.fathmm_pred, db.cadd_raw, db.dann_score, db.mutation_taster_pred,\n",
+      "            db.mutation_assessor_score, mutation_assessor_pred, db.provean_score, db.provean_pred,\n",
+      "            db.clinvar_clnsig, db.interpro_domain, db.exac_af,\n",
+      "            CASE\n",
+      "                WHEN SUBSTRING(nbs.sample_id, -2) = '01'THEN 'M'\n",
+      "                WHEN SUBSTRING(nbs.sample_id, -2) = '02' THEN 'F'\n",
+      "                WHEN SUBSTRING(nbs.sample_id, -2) = '03'THEN 'NB'\n",
+      "                END as member,\n",
+      "            SUBSTRING(nbs.sample_id, 1, (length(nbs.sample_id)-3)) as family_id,\n",
+      "            CONCAT(nbs.chrom, ':', CAST(nbs.pos AS STRING), ':', nbs.ref, ':', nbs.alt) as var_id \n",
+      "        FROM nbs, {} db\n",
+      "            WHERE nbs.chrom = db.chrom\n",
+      "            AND nbs.pos = db.pos\n",
+      "            AND nbs.alt = db.alt\n",
+      "            '''.format(out_db, out_db, clinvar_table, dbnfsp_table)\n",
       "\n",
-      "# run kaviar query on impala\n",
-      "run_query(dann_query, 'nbs_annotated')"
+      "# run dbNFSP query on impala\n",
+      "run_query(dbnsfp_query, 'nbs_annotated')"
      ],
      "language": "python",
-     "prompt_number": 29
+     "prompt_number": 10
     },
     {
      "cell_type": "heading",
@@ -433,13 +432,21 @@
       "cur.close()"
      ],
      "language": "python",
-     "prompt_number": 28
+     "prompt_number": 11
     },
     {
      "cell_type": "code",
      "execution_count": null,
      "metadata": {},
-     "outputs": [],
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "11457 variants located in NBS regions.\n"
+       ]
+      }
+     ],
      "input": [
       "if len(nbs_df) > 0:\n",
       "    print str(len(nbs_df)) + ' variants located in NBS regions.'\n",
@@ -447,7 +454,7 @@
       "    print \"No variants located in NBS regions.\""
      ],
      "language": "python",
-     "prompt_number": 47
+     "prompt_number": 12
     },
     {
      "cell_type": "heading",
@@ -472,6 +479,9 @@
      "input": [
       "import subprocess as subp\n",
       "import os\n",
+      "\n",
+      "# rename 'geno' to 'gt' for vcf output\n",
+      "nbs_df = nbs_df.rename(columns = {'geno':'gt'})\n",
       "\n",
       "# function to add functional annotation\n",
       "def df_to_snpeff(input_df):\n",
@@ -501,7 +511,7 @@
       "    print str(e)"
      ],
      "language": "python",
-     "prompt_number": 63
+     "prompt_number": 8
     },
     {
      "cell_type": "markdown",
@@ -516,26 +526,14 @@
      "metadata": {},
      "outputs": [],
      "input": [
-      ""
-     ],
-     "language": "python"
-    },
-    {
-     "cell_type": "code",
-     "execution_count": null,
-     "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "11901674\n"
-       ]
-      }
-     ],
-     "input": [
       "import numpy as np\n",
       "import pandas as pd\n",
+      "\n",
+      "# function to drop extra columns ending in _y from df merge\n",
+      "def drop_y(df):\n",
+      "    for col in df:\n",
+      "        if col.endswith('_y'):\n",
+      "            df.drop(col, axis=1, inplace=True)\n",
       "\n",
       "# add snpeff annotations back to dataframe\n",
       "def parse_snpeff(input_df):\n",
@@ -543,35 +541,51 @@
       "    annot_vcf = pd.read_csv('nbs_snpeff.vcf', sep='\\t', skiprows=8)\n",
       "    # split info columns by \"|\" \n",
       "    info_df = pd.DataFrame(list(annot_vcf['INFO'].str.split('|')))\n",
-      "    # keep only first (most detrimenatl) consequence listed\n",
+      "    # keep only first (most detrimental) consequence listed\n",
       "    info_df = info_df[list(info_df.columns[1:11])]\n",
       "    # merge truncated info field with annot_vcf\n",
-      "    annot_vcf = annot_vcf[np.r_[0, 1, 3:7, 9]]\n",
+      "    annot_vcf = annot_vcf[np.r_[0,1,2, 3:7, 9]]\n",
       "    annot_df = pd.concat([annot_vcf, info_df], axis=1)\n",
       "    # rename columns\n",
-      "    annot_df.columns =['chrom', 'pos', 'ref', 'alt', 'qual', 'filter', 'gt', 'effect', 'impact', 'gene_name', 'gene_id', 'feature_type', 'feature_id', 'tx_biotype', 'rank', 'hgvs_c', 'hgvs_p']\n",
+      "    annot_df.columns =['chrom', 'pos', 'id', 'ref', 'alt', 'qual', 'filter', 'gt', 'effect', 'impact', 'gene_name', \n",
+      "    'gene_id', 'feature_type', 'feature_id', 'tx_biotype', 'rank', 'hgvs_c', 'hgvs_p']\n",
       "    # drop unnecessary columns before merging\n",
       "    annot_df.drop(['qual', 'filter', 'gene_name', 'gene_id', 'feature_id', 'feature_type', 'rank'], axis=1, inplace=True)\n",
       "    # merge annotations with variant table\n",
-      "    df_functional = pd.merge(input_df, annot_df, on=['chrom', 'pos', 'ref', 'alt', 'gt'], how='left')\n",
-      "    print len(df_functional)\n",
-      "    # # # drop unnecessary columns\n",
-      "    # df_functional.drop(['qual_y', 'filter_y', 'gene_name', 'gene_id', 'feature_id', 'feature_type', 'rank'], axis=1, inplace=True)\n",
-      "    # # rename columns ending in _x from merge\n",
-      "    # df_functional.rename(columns=lambda x: x.replace('_x', ''), inplace=True)\n",
-      "    # return df_functional\n",
+      "    df_functional = pd.merge(input_df, annot_df, left_on=['var_id'], right_on=['id'], how='left')\n",
+      "    drop_y(df_functional)\n",
+      "    # rename columns ending in _x from merge\n",
+      "    df_functional.rename(columns=lambda x: x.replace('_x', ''), inplace=True)\n",
+      "    return df_functional\n",
       "    \n",
       "# merge nbs_genes with functional annotations\n",
       "nbs_annot = parse_snpeff(nbs_df)"
      ],
      "language": "python",
-     "prompt_number": 64
+     "prompt_number": 13
+    },
+    {
+     "cell_type": "heading",
+     "metadata": {},
+     "level": 2,
+     "source": [
+      "Labeling potentially pathogenic mutations"
+     ]
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "For downstream analysis, variants were labled as predictive if they were rare variants with a high SnpEff impact score or a predicted DANN pathogenicity rating of higher than the cutoff from user arguments, or if they were labeled as clinically significant in ClinVar. "
+      "sift_pred = D\n",
+      "polyphen2_hdiv_pred\n",
+      "polyphen2_hvar_pred\n",
+      "mutation_taster_pred\n",
+      "mutation_assessor_pred\n",
+      "fathmm_pred = D\n",
+      "provean_pred = D\n",
+      "cadd_raw\n",
+      "dann_score > .96\n",
+      "exac_af < .03"
      ]
     },
     {
@@ -699,13 +713,7 @@
       "# keep only heterozygous parent variants, as homozygous parents are not of interest\n",
       "mom_het = mothers.loc[mothers['gt'] == '0/1']\n",
       "dad_het = fathers.loc[fathers['gt'] == '0/1']\n",
-      "\n",
-      "# function to drop extra columns ending in _y from df merge\n",
-      "def drop_y(df):\n",
-      "    for col in df:\n",
-      "        if col.endswith('_y'):\n",
-      "            df.drop(col, axis=1, inplace=True)\n",
-      "            \n",
+      "           \n",
       "# function to find matching parent variants\n",
       "def find_parent_vars(nb_df, parent_df):\n",
       "    # merge dataframes on variant id\n",
