Adding clarity data, add logic for multiple children

--- a/nbs_genes/nbs_genes_clarity.ipynb
+++ b/nbs_genes/nbs_genes_clarity.ipynb
@@ -64,7 +64,7 @@
       "## family id ##\n",
       "###############\n",
       "# uncomment for list \n",
-      "sample_list = '08-01_PG0001705-BLD','08-04_PG0001704-BLD','08-05_PG0001706-BLD','05-02_PG0003573-BLD','05-03_PG0003565-BLD','05-01_PG0003524-BLD','07-02_PG0001692-BLD','07-03_PG0001693-BLD','07-01_PG0002918-DNA', '07-05_PG0002918-DNA','06-02_PG0001697-BLD','06-03_PG0001698-BLD','06-01_PG0001696-BLD'\n",
+      "sample_list = '08-01_PG0001705-BLD','08-04_PG0001704-BLD','08-05_PG0001706-BLD','05-02_PG0003573-BLD','05-03_PG0003565-BLD','05-01_PG0003524-BLD','07-02_PG0001692-BLD','07-03_PG0001693-BLD','07-01_PG0002918-DNA', '06-02_PG0001697-BLD','06-03_PG0001698-BLD','06-01_PG0001696-BLD'\n",
       "\n",
       "####################\n",
       "## trio member(s) ##\n",
@@ -85,7 +85,7 @@
       "# enter database.name for variant table\n",
       "variant_table = 'clarity2.wgs_illumina_variant'\n",
       "# enter database.name of kaviar table\n",
-      "kaviar_table = 'p7_ref_grch37.kaviar_isb'\n",
+      "kaviar_table = 'p7_ref_grch37.kaviar'\n",
       "# enter database.name of clinvar table\n",
       "clinvar_table = 'p7_ref_grch37.clinvar'\n",
       "# enter database.name of dann table\n",
@@ -101,7 +101,7 @@
       "out_name = 'clarity_nbs_genes'"
      ],
      "language": "python",
-     "prompt_number": 83
+     "prompt_number": 8
     },
     {
      "cell_type": "heading",
@@ -207,7 +207,7 @@
       "    subject_statement = ''"
      ],
      "language": "python",
-     "prompt_number": 84
+     "prompt_number": 9
     },
     {
      "cell_type": "code",
@@ -223,7 +223,7 @@
       "conn=connect(host='glados19', port=21050)"
      ],
      "language": "python",
-     "prompt_number": 85
+     "prompt_number": 15
     },
     {
      "cell_type": "code",
@@ -234,7 +234,14 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Running the following query on impala: \n\n\n    CREATE TABLE users_selasady.nbs_kaviar AS         \n          WITH bv as (\n             SELECT bv.sample_id, bv.chrom, bv.pos, bv.id, bv.ref, \n                  bv.alt, bv.qual, bv.filter, regexp_replace(gt, '1/2', '0/1') as geno, k.allele_freq,  \n                  CASE WHEN (k.allele_freq < .03 OR k.allele_freq IS NULL )then 'Y'\n                  ELSE 'N'\n                  END as kaviar_rare\n             FROM clarity2.wgs_illumina_variant bv\n             LEFT JOIN /* +SHUFFLE */ p7_ref_grch37.kaviar_isb k\n                  ON bv.chrom = k.chrom\n                  AND bv.pos = k.pos\n                  AND bv.ref = k.ref\n                  AND bv.alt = k.alt\n            WHERE (bv.chrom <> 'X' AND bv.chrom <> 'Y')\n            AND bv.sample_id IN ('08-01_PG0001705-BLD', '08-04_PG0001704-BLD', '08-05_PG0001706-BLD', '05-02_PG0003573-BLD', '05-03_PG0003565-BLD', '05-01_PG0003524-BLD', '07-02_PG0001692-BLD', '07-03_PG0001693-BLD', '07-01_PG0002918-DNA', '07-05_PG0002918-DNA', '06-02_PG0001697-BLD', '06-03_PG0001698-BLD', '06-01_PG0001696-BLD') \n         )\n        SELECT DISTINCT bv.*, nbs.gene, nbs.entrez_gene_id, nbs.condition, nbs.mrna,\n            nbs.omim_phenotype, nbs.va_name, nbs.inheritance, nbs.allelic_condition,nbs.in_pgb, \n            nbs.level, nbs.comments          \n       FROM bv, users_selasady.nbs_ucsc nbs\n       WHERE bv.chrom = nbs.chrom\n       AND bv.pos BETWEEN nbs.txstart and nbs.txend\n       \nQuery finished. Please note that the 1/2 genotype was converted to 0/1 for downstream compatibility. \n Closing connection."
+        "Checking if table name already exists...\nRunning the following query on impala: \n\n\n    CREATE TABLE users_selasady.nbs_kaviar AS         \n          WITH bv as (\n             SELECT bv.sample_id, bv.chrom, bv.pos, bv.id, bv.ref, \n                  bv.alt, bv.qual, bv.filter, regexp_replace(gt, '1/2', '0/1') as geno, k.allele_freq,  \n                  CASE WHEN (k.allele_freq < .03 OR k.allele_freq IS NULL )then 'Y'\n                  ELSE 'N'\n                  END as kaviar_rare\n             FROM clarity2.wgs_illumina_variant bv\n             LEFT JOIN /* +SHUFFLE */ p7_ref_grch37.kaviar k\n                  ON bv.chrom = k.chrom\n                  AND bv.pos = k.pos\n                  AND bv.ref = k.ref\n                  AND bv.alt = k.alt\n            WHERE (bv.chrom <> 'X' AND bv.chrom <> 'Y')\n            AND bv.sample_id IN ('08-01_PG0001705-BLD', '08-04_PG0001704-BLD', '08-05_PG0001706-BLD', '05-02_PG0003573-BLD', '05-03_PG0003565-BLD', '05-01_PG0003524-BLD', '07-02_PG0001692-BLD', '07-03_PG0001693-BLD', '07-01_PG0002918-DNA', '06-02_PG0001697-BLD', '06-03_PG0001698-BLD', '06-01_PG0001696-BLD') \n         )\n        SELECT DISTINCT bv.*, nbs.gene, nbs.entrez_gene_id, nbs.condition, nbs.mrna,\n            nbs.omim_phenotype, nbs.va_name, nbs.inheritance, nbs.allelic_condition,nbs.in_pgb, \n            nbs.level, nbs.comments          \n       FROM bv, users_selasady.nbs_ucsc nbs\n       WHERE bv.chrom = nbs.chrom\n       AND bv.pos BETWEEN nbs.txstart and nbs.txend\n       "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\nQuery finished. Please note that the 1/2 genotype was converted to 0/1 for downstream compatibility. \n Closing connection."
        ]
       },
       {
@@ -277,6 +284,7 @@
       "def run_query(query_name, db_name):\n",
       "    # drop table if it exists\n",
       "    cur = conn.cursor()\n",
+      "    print 'Checking if table name already exists...'\n",
       "    cur.execute('DROP TABLE IF EXISTS {}.{}'.format(out_db,db_name))\n",
       "    cur.close()\n",
       "    # run query \n",
@@ -290,7 +298,7 @@
       "run_query(kaviar_query, 'nbs_kaviar')"
      ],
      "language": "python",
-     "prompt_number": 86
+     "prompt_number": 16
     },
     {
      "cell_type": "heading",
@@ -360,7 +368,6 @@
       "                WHEN nbs.sample_id = '07-02_PG0001692-BLD' THEN 'M'\n",
       "                WHEN nbs.sample_id = '07-03_PG0001693-BLD' THEN 'F'\n",
       "                WHEN nbs.sample_id = '07-01_PG0002918-DNA' THEN 'NB'\n",
-      "                WHEN nbs.sample_id = '07-05_PG0002918-DNA' THEN 'NB2'\n",
       "                WHEN nbs.sample_id = '06-02_PG0001697-BLD' THEN 'M'\n",
       "                WHEN nbs.sample_id = '06-03_PG0001698-BLD' THEN 'F'\n",
       "                WHEN nbs.sample_id = '06-01_PG0001696-BLD' THEN 'NB'\n",
@@ -603,7 +610,7 @@
      ],
      "input": [
       "# label variants considered pathogenic \n",
-      "nbs_annot['predictive'] =  ((nbs_annot['kaviar_rare'] == 'Y') & ((nbs_annot['impact'] == 'HIGH') | (nbs_annot['dbnfsp_predicted'] == 'Y') | (nbs_annot['kaviar_rare'] == 'Y') | (nbs_annot['dann_score'] >= float(dann_score))))\n",
+      "nbs_annot['predictive'] =  ((nbs_annot['kaviar_rare'] == 'Y') & ((nbs_annot['impact'] == 'HIGH') | (nbs_annot['dbnfsp_predicted'] == 'Y') | (nbs_annot['clin_patho'] == 'Y') | (nbs_annot['dann_score'] >= float(dann_score))))\n",
       " \n",
       "print str(len(nbs_annot[(nbs_annot['predictive'] == True)]   )) + \" variants labeled as predictive.\""
      ],
